# CECAM-ASE-2023

./: README.md  build_env.md  build_env.sh  environment.yaml  kdp_env.sh  postBuild  tmp
ASEExample/: example.py  source.sh
LAMMPSExample/: example.lmp  test_si.data
SF__MO_000000000000_000/: CMakeLists.txt  kim_model.param  kimspec.edn  model.pt
binder/: Dockerfile  apt.txt  environment.yml  postBuild  setup.py
data/: si4.pt
data/Si_training_set_4_configs/: Si_alat5.409_scale0.005_perturb1.xyz  Si_alat5.420_scale0.005_perturb1.xyz  Si_alat5.431_scale0.005_perturb1.xyz  Si_alat5.442_scale0.005_perturb1.xyz
micromamba_bin/: README
notebooks/: Dataset.ipynb  ExampleMCMC.ipynb  MLModels.ipynb  NF.out  PhysicsBasedModels.ipynb  VC.out  VerificationChecks.sh
